# LexAI

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  install.sh  pyproject.toml  requirements.txt
config/: nginx-gateway.conf  settings.yaml
docs/: architecture.md  data_model.md  improvement_loop.md
sample_data/fuad-lex-dataset/: CUMBERLAND_PHARMACEUTICALS_INC___CPIX____000162828023007952_ajkazimiemploymentagreemen.html  CUMBERLAND_PHARMACEUTICALS_INC___CPIX____000162828023007952_chrisbittermanemploymentag.htm.html  CUMBERLAND_PHARMACEUTICALS_INC___CPIX____000162828023007952_jameshermanemploymentagree.htm.html  CUMBERLAND_PHARMACEUTICALS_INC___CPIX____000162828023007952_johnhammemploymentagreemen.html  cfr_16_0_1.json  cfr_16_0_2.json  cfr_16_0_3.json
sample_data/inputs/: README.md
sample_data/outputs/: README.md
scripts/: deploy.sh  ingest_batch.py  init_db.sql  reset.py  serve.sh  setup_host.sh  simulate_edits.py
src/api/: routes.py  schemas.py
src/extraction/: chunker.py  field_extractor.py
src/generation/: draft_generator.py  prompts.py
src/ingestion/: _marker.py  loader.py  ocr.py  pdf_extractor.py
src/learning/: edit_tracker.py  pattern_store.py
src/retrieval/: embedder.py  vector_store.py
src/ui/: app.py
src/utils/: db.py  llm_client.py  logger.py  storage.py
tests/integration/: test_ingestion_pipeline.py
tests/unit/: test_chunker.py  test_edit_tracker.py  test_prompts.py
