[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "lexai"
version = "0.1.0"
description = "Legal document ingestion and grounded draft generation"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",      # file upload support

    # Data validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",

    # PDF processing
    "pdfminer.six>=20231228",
    "pdf2image>=1.17.0",            # wraps Poppler for PDF-to-image

    # Image processing and OCR
    "Pillow>=10.3.0",
    "pytesseract>=0.3.10",
    "opencv-python-headless>=4.9.0",
    "deskew>=1.5.1",

    # NLP / chunking
    "nltk>=3.8.1",
    "tiktoken>=0.7.0",              # token counting (OpenAI tokenizer)

    # Embeddings and vector store
    "chromadb>=0.5.0",
    "openai>=1.30.0",               # for text-embedding-3-small

    # LLM
    "anthropic>=0.28.0",

    # Database
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.30",

    # Utilities
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "structlog>=24.1.0",
    "rich>=13.7.1",                 # CLI output formatting
]

[project.optional-dependencies]
local-embeddings = [
    "sentence-transformers>=3.0.0",
    "torch>=2.3.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "httpx>=0.27.0",                # test client for FastAPI
    "pytest-cov>=5.0.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "reportlab>=4.2.0",             # for generating sample PDFs
    "matplotlib>=3.9.0",            # for generating sample survey map
]

[project.scripts]
lexai-ingest = "src.scripts.ingest_batch:main"
lexai-serve = "src.api.routes:run"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
